# bevy-saiko-ui

./: Cargo.toml  README.md
examples/: font_test.rs  main.rs  paragraph_wraping.rs
src/: lib.rs
src/common/: bounds.rs  mod.rs  util.rs  value.rs
src/debug/: bounds_debugger.rs  mod.rs
src/render/: blit.wgsl  buffer.rs  font.rs  mod.rs  noto_sans_font.json  pass.rs  pipeline.rs  saiko.wgsl  style.wgsl  vertex.rs
src/render/font/: mod.rs  sdf.rs
src/ui/: context.rs  mod.rs  node.rs  position.rs  shaping.rs
src/ui/component/: cache.rs  mod.rs  rect.rs
