[package]
name = "bevy-saiko-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bytemuck = { version = "1.15.0", features = [ "derive" ] }
# wgpu = "0.19.3"

[dev-dependencies]
bevy-inspector-egui = "0.23.0"
