[package]
name = "bevy-saiko-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
thiserror = "1.0.58"
ttf-parser = "0.18.0"
msdfgen = { version = "0.2.1", features = ["ttf-parser"] }
etagere = "0.2.10"
notosans = "0.1.0"
cosmic-text = "0.11.2"
paragraph-breaker = "0.4.4"
fit_text = "0.3.3"

[dev-dependencies]
bevy-inspector-egui = "0.23.0"
